--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -112,12 +112,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
          <!--Inicio tabla-->
             <div class="container my-5 text-center">
                 <!-- filtros -->
+                
                 <div class="my-3 col-md-6 text-left">
                 <dl>
                 <dd text_align="left">
                     &nbsp;
-                    Marcas
-                <select id="marcas" name="marcas" text_align="right" class="form-control form-control-width-small">
+                    <FONT FACE="Arial">Marcas</FONT>
+                    
+                <select id="marcas" name="marcas" text_align="right" class="form-control form-control-width-small" >
                     <option value="" selected >Seleccionar marca</option>
                 </select>
                 </dd>
@@ -125,7 +127,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <dd>
                     &nbsp;
-                    Modelos
+                    
+                    <FONT FACE="Arial">Modelos</FONT>
                 <select id="modelos" name="modelos" class="form-control form-control-width-small">
                     <option value="" selected >Seleccionar modelo</option>
                 </select>
@@ -137,7 +140,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <dl>
                 <dd text_align="left">
                     &nbsp;
-                    Tipos de vehículos
+                    
+                    <FONT FACE="Arial">Tipos de vehículos</FONT>
                 <select id="tiposVehiculos" name="tiposVehiculos" text_align="right" class="form-control form-control-width-small">
                     <option value="" selected >Seleccionar tipo de vehículo</option>
                 </select>
@@ -146,7 +150,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 
                 <dd text_align="left">
                     &nbsp;
-                    Tipos de combustibles
+                    
+                    <FONT FACE="Arial">Tipos de combustibles</FONT>
                 <select id="tiposCombustibles" name="tiposCombustibles" class="form-control form-control-width-small">
                     <option value="" selected >Seleccionar tipo de combustible</option> 
                 </select>
