--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <title>CONCESIONARIA</title>
     <!-- custom-theme -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+   <link rel="icon" href="\images\Concesionaria Latinoamericana.png">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="CONCESIONARIA Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
