--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,6 +10,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
     <title>Concesionaria Latinoamericana | Iniciar Sesión</title>
     <!-- custom-theme -->
+    <link rel="icon" href="\images\Concesionaria Latinoamericana.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="CONCESIONARIA Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
