--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -152,7 +152,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 </div>
                 
-                <button type="button" class="btn btn-outline-warning" onclick="filtrarCarros()">Filtrar</button>
+                <button type="button" class="btn btn-outline-warning" onclick="filtrarCarros(10,0)">Filtrar</button>
 
                 <!-- grafica -->
                 <figure class="highcharts-figure">
