--- a/views/index.hbs
+++ b/views/index.hbs
@@ -123,7 +123,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div id= "mensaje" class="w3l-about-grids " >
                 Si desea consultar un automóvil de la Concesionaria Latinoamericana, Por favor
                         <div  class="loginIndex">
-                            <a href="/login">Inicie Sesión.</a>
+                            <a href="/login">Inicie Sesión</a>
+                            <a href="/registrarse"> o Regístrese.</a>
                         </div>
                  
              </div>
