--- a/views/about.hbs
+++ b/views/about.hbs
@@ -115,7 +115,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="ab-agile">
                 <div class="col-md-5 ab-pic">
-                    <img src="images/portada.jpg" alt=" " />
+                    <img src="\images\Concesionaria Latinoamericana.png" alt=" " />
                 </div>
                 <div class="col-md-7 ab-text">
                     <p>CONCESIONARIA LATINOAMERICANA  </p>
